Draw branches for contacts in KPeople mode

REVIEW: 112658
BUG: 324602
BUG: 324300