contact-list-widget_p.h
@@ -20,6 +20,8 @@
 #ifndef CONTACT_LIST_WIDGET_P_H
 #define CONTACT_LIST_WIDGET_P_H
 
+#include <QProxyStyle>
+
 #include <TelepathyQt/Types>
 #include <KTp/Models/contacts-model.h>
 
@@ -29,6 +31,7 @@ namespace KTp {
 
 class ContactDelegate;
 class ContactDelegateCompact;
+class QStyle;
 
 class ContactListWidgetPrivate {
 public:
@@ -51,6 +54,7 @@ public:
     Tp::AccountManagerPtr         accountManager;
     KTp::ContactsModel::GroupMode groupMode; // Stores current grouping mode (by accounts or by groups)
     QPersistentModelIndex         selectedIndex;
+    QScopedPointer<QStyle>        style;
 };
 
 #endif //CONTACT_LIST_WIDGET_P_H
